# difference-calculator

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: gendiff.yml
gendiff/: __init__.py  build_diff.py  deserialization.py  diff_generate.py  find_diff.py  gendiff.py  parser.py
gendiff/formatters/: json_.py  json_mapping.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_diff_generate.py  test_gendiff.py
tests/fixtures/input/: flat1.yaml  flat2.yaml
tests/fixtures/output/: jsonformat_flat_yaml.txt  plain_flat_yaml.txt  stylish_flat_yaml.txt
